第一次提交

--- a/app/src/main/res/anim/view_animation.xml
+++ b/app/src/main/res/anim/view_animation.xml
@@ -15,5 +15,6 @@
     android:fillEnabled= "false"
     android:repeatMode= "restart"
     android:repeatCount ="infinite"
+    android:interpolator="@android:anim/overshoot_interpolator"
 
     />
