--- a/app/src/main/res/layout/activity_.xml
+++ b/app/src/main/res/layout/activity_.xml
@@ -36,7 +36,84 @@
             android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:background="#1306C4"
-            android:text=""
+            android:text="Http"
+            android:layout_height="100dp"/>
+        <Button
+            android:id="@+id/bu5"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:background="#E909C3"
+            android:text="登录"
+            android:layout_height="100dp"/>
+        <Button
+            android:id="@+id/bu6"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:background="#E41333"
+            android:text="服务"
+            android:layout_height="100dp"/>
+        <Button
+            android:id="@+id/bu7"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:background="#01BBBB"
+            android:text="服务2"
+            android:layout_height="100dp"/>
+        <Button
+            android:id="@+id/bu8"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:background="#B7B9DF"
+            android:text="PLOT"
+            android:layout_height="100dp"/>
+        <Button
+            android:id="@+id/bu9"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:background="#E7AA2A"
+            android:text="Gesture"
+            android:layout_height="100dp"/>
+        <Button
+            android:id="@+id/bu10"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:background="#03A9F4"
+            android:text="Recycler"
+            android:layout_height="100dp"/>
+        <Button
+            android:id="@+id/bu11"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:background="#8814DA"
+            android:text="Broadcast"
+            android:layout_height="100dp"/>
+        <Button
+            android:id="@+id/bu12"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:background="#8814DA"
+            android:text="Contacts"
+            android:layout_height="100dp"/>
+        <Button
+            android:id="@+id/bu13"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:background="#ABE918"
+            android:text="SQLIST"
+            android:layout_height="100dp"/>
+        <Button
+            android:id="@+id/bu14"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:background="#9CB2F5"
+            android:text="sqlist2"
+            android:layout_height="100dp"/>
+        <Button
+            android:id="@+id/bu15"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:background="#C5B024"
+            android:text="Camera"
             android:layout_height="100dp"/>
     </LinearLayout>
 </ScrollView>
