--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="RED">#FA0419</color>
     <color name="BLACK">#141414</color>
+    <color name="white">#F5F4F4</color>
 </resources>
